# lynx-compare-fund

./: .gitignore  CHANGELOG.md  README.md  lynx-compare-fund.py  pyproject.toml  requirements.txt
.github/: PUBLISHING.md
docs/: API.md
lynx_compare_fund/: __init__.py  __main__.py  about.py  api.py  cli.py  display.py  engine.py  export.py  interactive.py  multi.py  plugin.py  server.py
lynx_compare_fund/gui/: app.py
lynx_compare_fund/tui/: app.py  themes.py
tests/: conftest.py  test_about.py  test_api.py  test_cli.py  test_display.py  test_engine.py  test_export.py  test_multi.py  test_plugin.py  test_server.py
