[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-compare-fund"
version = "6.0.0"
description     = "Lynx Compare Fund — Side-by-side mutual / index fund comparison with winner-per-section scoring"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "BSD-3-Clause"}
authors         = [{name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org"}]
keywords        = ["finance", "investing", "mutual-fund", "index-fund", "compare", "side-by-side"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies    = [
    "lynx-investor-core>=6.0.0",
    "lynx-fund>=6.0.0",
    "rich>=13.7",
    "textual>=0.50",
    "flask>=3.0",
    "argcomplete>=3.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
test = ["robotframework>=7.0"]
all = ["weasyprint>=60", "robotframework>=7.0"]

[project.urls]
Homepage   = "https://github.com/borjatarraso/lynx-compare-fund"
Repository = "https://github.com/borjatarraso/lynx-compare-fund"
Issues     = "https://github.com/borjatarraso/lynx-compare-fund/issues"
Changelog  = "https://github.com/borjatarraso/lynx-compare-fund/blob/main/CHANGELOG.md"

[project.scripts]
lynx-compare-fund = "lynx_compare_fund.__main__:main"
lynx-compare-fund-server = "lynx_compare_fund.server:run_server"

[project.entry-points."lynx_investor_suite.agents"]
compare-fund = "lynx_compare_fund.plugin:register"

[tool.setuptools.packages.find]
include = ["lynx_compare_fund*"]

[tool.setuptools.package-data]
lynx_compare_fund = ["img/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
